<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_Titulo"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_Genero"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_Director"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_anio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_Año"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"/>

            <RatingBar
                android:id="@+id/rating_puntuacion_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:isIndicator="true"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/tv_resenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hint_Reseña"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/edit"/>

        <Button
            android:id="@+id/btn_eliminar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/delete" />
    </LinearLayout>

</LinearLayout>